# lori

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lua/: lori_meta.lua
rust/: Cargo.toml
src/: main.rs
src/content/: collider.rs  mod.rs  object.rs  shape.rs  spawner.rs  thing.rs
src/shaders/: main.wgsl  prim.wgsl
src/utils/: lori.rs  mod.rs  print.rs  transform.rs
tests/: main.lua
