[package]
name = "lori"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive"] }
colored = "3.1.1"
crossbeam = "0.8.4"
mlua = { version = "0.12.0", features = ["luajit52", "send"] }
pollster = "1.0.1"
rapier2d = { version="0.34.0", features = ["parallel"] }
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "30.0.0"
winit = "0.30.13"
